--- a/blockchain_apps.html
+++ b/blockchain_apps.html
@@ -82,7 +82,7 @@
 								<h2>Contact us:</h2>
 								<ul class="icons">
 									<li><a href="https://twitter.com/UPUteam" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://github.com/UPUteam" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://uputeam.github.io" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 
