--- a/blockchain_apps.html
+++ b/blockchain_apps.html
@@ -50,7 +50,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>blockchain applications</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="images/2018_02_26_read_saved_message_from_blockchain.png" alt="read saved messages from the blockchain" /></span>
 							<p>example:<br>
 							&nbsp;&nbsp;&nbsp;click <a href="https://github.com/UPUteam/diverse/wiki">this wiki page</a> + post your text + it will be saved in our blockchain</p>
 						</div>
