--- a/blockchain_apps.html
+++ b/blockchain_apps.html
@@ -59,6 +59,7 @@
 							<br><br>
 							
 							<h2 id="read">read old data from the blockchain</h2>
+							<p>Read <a href="messages.html">here</a> all messages.<br></p>
 							<p>A python script extracs past messages (the first one was saved in block #1743):</p>
 							
 							<center>
